# internal/handlers/http/car_handler.go
@@ -75,3 +75,35 @@ func (cr *CarHandler) RemoveCar(c *fiber.Ctx) error {
 	c.Status(http.StatusOK)
 	return nil
 }
+
+// EditCar godoc
+// @Summary EditCar
+// @Description Edits car from the pool of available cars. Can be executed only by admin.
+// @Tags CarManagement
+// @Produce json
+// @Param carID path string true "car`s ID"
+// @Param input body models.CarReq true "car request"
+// @Param Authorization header string true "token"
+// @Success 201 {object} int
+// @Failure 400 {object} errors.HTTPError
+// @Failure 404 {object} errors.HTTPError
+// @Failure 405 {object} errors.HTTPError
+// @Failure 500 {object} errors.HTTPError
+// @Router /v1/admin/remove/{carID} [delete]
+func (cr *CarHandler) EditCar(c *fiber.Ctx) error {
+	var req models.CarReq
+
+	if err := c.BodyParser(&req); err != nil {
+		_ = c.Status(http.StatusBadRequest).SendString(err.Error())
+	}
+	carID := c.Params("carID")
+
+	if err := cr.uc.EditCar(c.UserContext(), req, carID); err != nil {
+		st, msg := errors.FromError(err, c.UserContext())
+		_ = c.Status(st).JSON(errors.HTTPError{ErrorCode: st, ErrorMsg: msg})
+		return nil
+	}
+
+	c.Status(http.StatusOK)
+	return nil
+}
